Readme and permission and destination

--- a/src/main/resources/config.toml
+++ b/src/main/resources/config.toml
@@ -1,9 +1,10 @@
 lobby-server = "hub"
 
-[[lang]]
+[lang]
 prefix = "§d[ServerTP] "
 usage = "§a/stp <player> <server>"
 noserver = "§aNo server to teleport"
+nopermission = "§cNo permission"
 player-num = "§a%d players"
 player-name = "§a%s"
 success = "§aTeleporting %s to %s..."
